--- a/index.html
+++ b/index.html
@@ -3,7 +3,23 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo Iqbal Izza Addaviqi</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Portofolio Iqbal Izza Addaviqi, Lulusan Teknik Informatika yang tertarik pada teknologi dan pengembangan bisnis."
+    />
+    <meta
+      name="keywords"
+      content="portofolio, web developer, designer, teknik informatika, bisnis, iqbal izza addaviqi"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="Iqbal Izza Addaviqi" />
+    <meta property="og:title" content="Portofolio Iqbal Izza Addaviqi" />
+    <meta
+      property="og:description"
+      content="Portofolio seorang web developer dan designer dengan fokus di bidang teknologi dan bisnis."
+    />
+    <title>Iqbal Izza Addaviqi</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -75,11 +91,11 @@
         >
           <div class="">
             <div style="height: 50px"></div>
-            <p class="fw-bold fs-5">Portofolio Iqbal Izza Addaviqi</p>
+            <h1 class="fw-bold fs-5">Iqbal Izza Addaviqi</h1>
             <div class="line-md-cstm"></div>
-            <h1 id="beranda" class="display-3 fw-bold text-success">
+            <h2 id="beranda" class="display-3 fw-bold text-success">
               Selamat Datang
-            </h1>
+            </h2>
             <p class="fw-bold text-secondary" style="text-align: justify">
               Lulusan dari program studi S1-Teknik Informatika Universitas
               Negeri Surabaya, dengan minat yang kuat di bidang teknologi dan
@@ -133,10 +149,10 @@
             <div class="card p-2">
               <div class="card-body">
                 <img src="assets/porto1.png" class="card-img-top" alt="..." />
-                <p class="card-porto-cstm fs-6 fw-bold">
+                <h2 class="card-porto-cstm fs-6 fw-bold">
                   Situs web ini dibuat untuk menjadi portofolio perusahaan yang
                   berfokus pada layanan dan penyedia properti bangunan.
-                </p>
+                </h2>
               </div>
             </div>
           </div>
@@ -144,10 +160,10 @@
             <div class="card p-2">
               <div class="card-body">
                 <img src="assets/porto2.png" class="card-img-top" alt="..." />
-                <p class="card-porto-cstm fs-6 fw-bold">
+                <h2 class="card-porto-cstm fs-6 fw-bold">
                   Dibuat untuk memperkenalkan produk katering yang disajikan
                   untuk pelayanan dalam bentuk situs web statis.
-                </p>
+                </h2>
               </div>
             </div>
           </div>
@@ -155,10 +171,10 @@
             <div class="card p-2">
               <div class="card-body">
                 <img src="assets/porto3.png" class="card-img-top" alt="..." />
-                <p class="card-porto-cstm fs-6 fw-bold">
+                <h2 class="card-porto-cstm fs-6 fw-bold">
                   Situs Web Sekolah ini didedikasikan untuk sekolah menengah
                   atas yang belum memiliki situs web sekolah.
-                </p>
+                </h2>
               </div>
             </div>
           </div>
@@ -166,10 +182,10 @@
             <div class="card p-2">
               <div class="card-body">
                 <img src="assets/porto4.png" class="card-img-top" alt="..." />
-                <p class="card-porto-cstm fs-6 fw-bold">
+                <h2 class="card-porto-cstm fs-6 fw-bold">
                   Berfokus pada pengembangan profil perusahaan untuk
                   memperkenalkan tujuan Metabharata Official.
-                </p>
+                </h2>
               </div>
             </div>
           </div>
@@ -177,10 +193,10 @@
             <div class="card p-2">
               <div class="card-body">
                 <img src="assets/porto5.png" class="card-img-top" alt="..." />
-                <p class="card-porto-cstm fs-6 fw-bold">
+                <h2 class="card-porto-cstm fs-6 fw-bold">
                   Dibuat untuk fokus pada media yang berisi menu-menu yang dapat
                   membantu dalam pembelajaran.
-                </p>
+                </h2>
               </div>
             </div>
           </div>
@@ -188,10 +204,10 @@
             <div class="card p-2">
               <div class="card-body">
                 <img src="assets/porto6.png" class="card-img-top" alt="..." />
-                <p class="card-porto-cstm fs-6 fw-bold">
+                <h2 class="card-porto-cstm fs-6 fw-bold">
                   Dibuat menggunakan WordPress, dirancang untuk mendukung
                   berbagai kebutuhan SMPN 26 Gresik
-                </p>
+                </h2>
               </div>
             </div>
           </div>
@@ -356,49 +372,51 @@
           </div>
         </div>
       </section>
-      <section class="row">
+      <form id="postForm">
         <div class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label">Nama</label>
+          <label for="name" class="form-label">Nama</label>
           <input
-            type="name"
+            type="text"
             class="form-control"
-            id="exampleFormControlInput1"
+            id="name"
+            name="name"
+            required
           />
         </div>
         <div class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label"
-            >Subjek</label
-          >
+          <label for="subject" class="form-label">Subjek</label>
           <input
-            type="subject"
+            type="text"
             class="form-control"
-            id="exampleFormControlInput1"
+            id="subject"
+            name="subject"
+            required
           />
         </div>
         <div class="mb-3">
-          <label for="exampleFormControlTextarea1" class="form-label"
-            >Ketik pesan</label
-          >
+          <label for="text" class="form-label">Ketik pesan</label>
           <textarea
             class="form-control"
-            id="exampleFormControlTextarea1"
+            id="text"
+            name="text"
             rows="3"
+            required
           ></textarea>
         </div>
         <div class="d-flex justify-content-end">
-          <button type="button" class="btn btn-success my-3">Kirim</button>
+          <button type="submit" class="btn btn-success my-3">Kirim</button>
         </div>
-      </section>
+      </form>
     </div>
     <footer class="text-white pt-4">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <p class="fs-6">
+            <h2 class="fs-6">
               Mari terhubung bersama saya dan jangan ragu untuk menjalin
               komunikasi. Saya selalu terbuka untuk kolaborasi, diskusi, atau
               pertanyaan. Hubungi saya melalui platform yang Anda pilih!
-            </p>
+            </h2>
           </div>
           <div class="d-flex justify-content-start">
             <a
@@ -420,15 +438,47 @@
             </a>
           </div>
         </div>
-        <div class="text-center py-3">
+        <div class="text-center py-3 font-color-cstm">
           <p>© 2024 Portofolio Iqbal. Semua hak dilindungi.</p>
         </div>
       </div>
     </footer>
+
+    <script>
+      document
+        .getElementById("postForm")
+        .addEventListener("submit", function (event) {
+          event.preventDefault(); // mencegah form submit secara default
+          const formData = {
+            to: "iqbalviqi5@gmail.com",
+            name: document.querySelector('input[name="name"]').value,
+            subject: document.querySelector('input[name="subject"]').value,
+            text: document.querySelector('textarea[name="text"]').value,
+          };
+
+          fetch("https://lumoshive-academy-email-api.vercel.app/send-email", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+              "x-api-key": "RJS1-202411",
+            },
+            body: JSON.stringify(formData),
+          })
+            .then((response) => response.json())
+            .then((data) => {
+              // hapus konten dalam form setelah berhasil dikirim
+              document.getElementById("postForm").reset();
+              alert("Process successfully completed");
+            })
+            .catch((error) => {
+              console.error("Error:", error);
+            });
+        });
+    </script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"
-  ></script>
 </html>
